
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkre"
version = "0.2.0"
description = "PKRE Cryptographic Research Engine"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Reza Niruomand" }]

[project.scripts]
pkre = "pkre.cli:main"
